--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "node-telegram-bot-api": "^0.61.0",
     "redis": "^4.6.7",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
   }
 }
