--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "generate:vapid": "web-push generate-vapid-keys --json > vapid-keys.json"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
@@ -20,6 +22,13 @@
     "node-telegram-bot-api": "^0.61.0",
     "redis": "^4.6.7",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "web-push": "^3.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
